cmake_minimum_required(VERSION 3.12)
cmake_policy(VERSION 3.12)
set(CMAKE_CXX_STANDARD 17 CACHE STRING "C++ standard")

set(PROJECT_NAME "env_parser")
set(PROJECT_VERSION 0.1)
project(${PROJECT_NAME} VERSION ${PROJECT_VERSION})

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_CURRENT_SOURCE_DIR}/bin)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_CURRENT_SOURCE_DIR}/bin)

option(BUILD_UNIT_TESTS "Build Unit Tests" ON)

add_executable(${PROJECT_NAME}_v${PROJECT_VERSION} main.cpp)

if(BUILD_UNIT_TESTS)
    add_subdirectory(tests/)
    enable_testing()
endif(BUILD_UNIT_TESTS)
